# cuHPX

./: CMakeLists.txt  Dockerfile  README.md  pyproject.toml
benchmarks/: sht_profiling.py  stream_overlap_profiling.py
cuhpx/: __init__.py  hpx_remap.py  hpx_sht.py  hpx_sht_spin2.py  sht_tools.py  sht_tools_spin2.py
examples/: wmap_optimization.py
src/data_remapping/: hpx_remapping.cpp
src/harmonic_transform/: hpx_fft.cpp  hpx_fft.h
tests/: conftest.py  test_batch_remap.py  test_cuda_graphs.py  test_data_remapping.py  test_differentiability.py  test_grad.py  test_harmonic_transform.py  test_regridding.py  test_sht_bluestein.py  test_sht_cuda.py  test_sht_cuda_batch.py  test_sht_cuda_stream.py  test_sht_spin2_cuda.py
