[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "cuHPX"
version = "2025.8.1"
description = "CUDA-accelerated HEALPix tools for harmonic transforms and remapping"
authors = [
  { name = "NVIDIA", email = "asubramaniam@nvidia.com" }
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "astropy",
  "torch_harmonics",
  # Expect PyTorch preinstalled in the environment; if you want to enforce:
  "torch>=2.4",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache-2.0 License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/NVlabs/cuHPX"

[tool.scikit-build]
wheel.packages = ["cuhpx"]
cmake.minimum-version = "3.18"
cmake.source-dir = "."
# Keep build artifacts in build/, not alongside sources
build-dir = "build/{wheel_tag}"
sdist.include = ["src", "cuhpx", "tests", "CMakeLists.txt", "LICENSE.txt", "README.md"]

[tool.scikit-build.editable]
# Key: makes editable installs load extensions from build/ via a redirect hook
mode = "redirect"
verbose = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\\.pyi?$'
exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# Enable flake8/pycodestyle (`E`), Pyflakes (`F`), flake8-bandit (`S`),
# isort (`I`), and performance 'PERF' rules.
lint.select = ["E", "F", "S", "I", "PERF"]
lint.fixable = ["ALL"]

# Never enforce `E402`, `E501` (line length violations),
# and `S311` (random number generators)
lint.ignore = ["E501", "S311"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

target-version = 'py38'

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files, and in `docs/*.py`.
"__init__.py" = ["F401", "E402"]
"docs/*.py" = ["F401"]
"**/{tests,docs,tools}/*" = ["E402"]
"**/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
"**/test_*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
